# 3.20.04 (65848) Jul 16, 2012
7/16/12 dev version that reflects changes to sponsor feature
7/16/12 #3380, add "-sponsor-off" arg to build.properties for production version of CCK DC
7/16/12 #3380, restore sponsor prototype files for CCK DC
5/29/12 #3166, deleted sponsor prototype files
# 3.20.03 (61560) Feb 21, 2012
2/21/12 new dev version for sponsor prototype, KD was having problems running the previous version
2/21/12 #3166, create a separate flavor for sponsor prototype, so we don't have to keep enabling/disabling in circuit-construction-kit-build.properties
2/8/12 #3166, disable sponsor prototype in circuit-construction-kit-build.properties
# 3.20.02 (61116) Feb 8, 2012
2/8/12 dev version with change requests to sponsor prototype
2/8/11 #3166, enable sponsor prototype in circuit-construction-kit-build.properties
2/8/12 #3166 change request: use a generic company (Your Company) instead of CU for the sponsor prototype
12/12/11 #3166, disable sponsor prototype in circuit-construction-kit-build.properties
# 3.20.01 (59298) Dec 12, 2011
12/12/11 dev version to demo sponsor prototype
12/12/11 #3166, enable sponsor prototype in circuit-construction-kit-build.properties
12/12/11 #3166, add files related to sponsor prototype
Fixed: Advanced panel doesn't close on reset all, resolves #2959
Removed unused noninternationalized code
# 3.20.00 (53075) Jun 12, 2011
6/12/11 > added new translation credits features
# 3.19.03 (52827) Jun 7, 2011
Fixed: "resistivity" doesn't reset when "reset all" is pressed, resolves #2934
Fixed: "show values" checkbox doesn't reset when "reset all" is pressed, resolves #2933
# 3.19.02 (52727) Jun 7, 2011
Fixed: "Advanced" label missing from control panel, resolves #2921
Fixed: light bulb units were listed as "bulb" instead of "Ohms" in the light bulb resistance control, resolves #2920
Fixed: listeners are removed while iterating over listener list, see #2919
Reformatted according to current PhET IntelliJ code style