@@ -1,7 +1,9 @@
+# Copyright 2002-2012, University of Colorado
 project.depends.data=data
 project.depends.source=src : Jama/src
 project.depends.lib=jfreechart-phet : nanoxml/nanoxml.jar
 project.flavor.circuit-construction-kit-dc.mainclass=edu.colorado.phet.circuitconstructionkit.CircuitConstructionKitDCApplication
+project.flavor.circuit-construction-kit-dc-goldberg.mainclass=edu.colorado.phet.circuitconstructionkit.CircuitConstructionKitDCGoldbergApplication
 project.flavor.circuit-construction-kit-dc.args=-sponsor-off
 project.flavor.circuit-construction-kit-ac.mainclass=edu.colorado.phet.circuitconstructionkit.CircuitConstructionKitACApplication
 project.flavor.circuit-construction-kit-dc-virtual-lab.mainclass=edu.colorado.phet.circuitconstructionkit.CircuitConstructionKitDCVirtualLabApplication
