@@ -1,4 +1,6 @@
+# Copyright 2002-2012, University of Colorado
 circuit-construction-kit-dc.name          =Circuit Construction Kit (DC Only)
+circuit-construction-kit-dc-goldberg.name          =Circuit Construction Kit (DC Only)
 circuit-construction-kit-ac.name        =Circuit Construction Kit (AC+DC)
 circuit-construction-kit-dc-virtual-lab.name          =Circuit Construction Kit (DC Only), Virtual Lab
 circuit-construction-kit-ac-virtual-lab.name        =Circuit Construction Kit (AC+DC), Virtual Lab
